// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Admin adminSampleEntities > No result - float seed 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "databasePerformance": null,
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
        "type": "write",
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > No result 1`] = `
[
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "databasePerformance": null,
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
        "type": "write",
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;

exports[`Admin adminSampleEntities > One result 1`] = `
[
  [
    "adminEntitySampleEntities",
    SessionContextImpl {
      "databasePerformance": null,
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
        "type": "write",
      },
      "transaction": null,
    },
    undefined,
    0,
    25,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
  [
    "adminEntitySearchTotalCount",
    SessionContextImpl {
      "databasePerformance": null,
      "defaultAuthKeys": [
        "none",
      ],
      "logger": {
        "debug": [Function],
        "error": [Function],
        "info": [Function],
        "warn": [Function],
      },
      "session": {
        "subjectId": "subject-id",
        "subjectInternalId": 123,
        "type": "write",
      },
      "transaction": null,
    },
    undefined,
    [
      {
        "authKey": "none",
        "resolvedAuthKey": "none",
      },
    ],
  ],
]
`;
